# bookstore

./: db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: heroku-deploy.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/viewsets/: product_viewset.py
