[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Analice <analice.leite12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
